force-app/main/default/objects/SPEN_Planning__c/SPEN_Planning__c.object-meta.xml
<CustomObject>
    <label>Planning</label>
    <nameField>
        <label>Planning Record Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planning</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>