force-app/main/default/objects/SPEN_Planning__c/fields/SPEN_Authority_Reference__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Authority_Reference__c</fullName>
    <label>Authority Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>