force-app/main/default/objects/SPEN_Planning__c/fields/SPEN_Comments__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Comments__c</fullName>
    <label>Reason of Cancellation/Refused</label>
    <length>255</length>
    <type>Text</type>
</CustomField>