force-app/main/default/objects/SPEN_Planning__c/fields/SPEN_ConsentingAuthority__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ConsentingAuthority__c</fullName>
    <label>Consenting Authority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SGECU</fullName>
            </value>
            <value>
                <fullName>LPA</fullName>
            </value>
            <value>
                <fullName>PEDW</fullName>
            </value>
            <value>
                <fullName>DESNZ</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>