force-app/main/default/objects/SPEN_Planning__c/fields/SPEN_ContactName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ContactName__c</fullName>
    <label>Contact Name (If Organisation)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>