force-app/main/default/objects/SPEN_Planning__c/fields/SPEN_DateSubmitted__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DateSubmitted__c</fullName>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>