force-app/main/default/objects/SPEN_Planning__c/fields/SPEN_Energy_Consenting_Authority__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Energy_Consenting_Authority__c</fullName>
    <label>Energy Consenting Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECU</fullName>
            </value>
            <value>
                <fullName>LPA</fullName>
            </value>
            <value>
                <fullName>PEDW</fullName>
            </value>
            <value>
                <fullName>DESNZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>