force-app/main/default/objects/SPEN_Planning__c/fields/SPEN_GIS_URL__c.field-meta.xml
<CustomField>
    <fullName>SPEN_GIS_URL__c</fullName>
    <label>GIS URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>