force-app/main/default/objects/SPEN_Planning__c/fields/SPEN_Local_Authority__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Local_Authority__c</fullName>
    <label>Local Authority</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPEN_Local_Authority_Country__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Argyll &amp; Bute</fullName>
            </value>
            <value>
                <fullName>Ceredigion</fullName>
            </value>
            <value>
                <fullName>Cheshire East</fullName>
            </value>
            <value>
                <fullName>Cheshire West and Chester</fullName>
            </value>
            <value>
                <fullName>City of Edinburgh</fullName>
            </value>
            <value>
                <fullName>Clackmannanshire</fullName>
            </value>
            <value>
                <fullName>Conwy</fullName>
            </value>
            <value>
                <fullName>Denbighshire</fullName>
            </value>
            <value>
                <fullName>Dumfries &amp; Galloway</fullName>
            </value>
            <value>
                <fullName>East Ayrshire</fullName>
            </value>
            <value>
                <fullName>East Dunbartonshire</fullName>
            </value>
            <value>
                <fullName>East Lothian</fullName>
            </value>
            <value>
                <fullName>Falkirk</fullName>
            </value>
            <value>
                <fullName>Fife</fullName>
            </value>
            <value>
                <fullName>Flintshire</fullName>
            </value>
            <value>
                <fullName>Glasgow City</fullName>
            </value>
            <value>
                <fullName>Gywnedd</fullName>
            </value>
            <value>
                <fullName>Halton</fullName>
            </value>
            <value>
                <fullName>Inverclyde</fullName>
            </value>
            <value>
                <fullName>Isle of Anglesey</fullName>
            </value>
            <value>
                <fullName>Knowsley</fullName>
            </value>
            <value>
                <fullName>Liverpool</fullName>
            </value>
            <value>
                <fullName>Midlothian</fullName>
            </value>
            <value>
                <fullName>North Ayrshire</fullName>
            </value>
            <value>
                <fullName>North Lanarkshire</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>Powys</fullName>
            </value>
            <value>
                <fullName>Renfrewshire</fullName>
            </value>
            <value>
                <fullName>Scottish Borders</fullName>
            </value>
            <value>
                <fullName>Sefton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>