force-app/main/default/objects/SPEN_Planning__c/fields/SPEN_Local_Authority_Country__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Local_Authority_Country__c</fullName>
    <label>Local Authority Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scotland</fullName>
            </value>
            <value>
                <fullName>England</fullName>
            </value>
            <value>
                <fullName>Wales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>