force-app/main/default/objects/SPEN_Planning__c/fields/SPEN_Milestone__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SPEN_Job_Milestone__c.SPEN_Job__c</field>
            <operation>equals</operation>
            <valueField>$Source.SPEN_Job__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SPEN_Job_Milestone__c</referenceTo>
    <relationshipLabel>Plannings</relationshipLabel>
    <relationshipName>Plannings</relationshipName>
    <type>Lookup</type>
</CustomField>