force-app/main/default/objects/SPEN_Planning__c/fields/SPEN_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S37 EIA</fullName>
            </value>
            <value>
                <fullName>S37 Non-EIA</fullName>
            </value>
            <value>
                <fullName>DCO</fullName>
            </value>
            <value>
                <fullName>S37 132 &lt;2KM</fullName>
            </value>
            <value>
                <fullName>S37 &lt;132</fullName>
            </value>
            <value>
                <fullName>IC 132</fullName>
            </value>
            <value>
                <fullName>IC &lt;132</fullName>
            </value>
            <value>
                <fullName>SPD Substation</fullName>
            </value>
            <value>
                <fullName>SPM 132 Substation</fullName>
            </value>
            <value>
                <fullName>SPM Substation</fullName>
            </value>
            <value>
                <fullName>SPT Substation</fullName>
            </value>
            <value>
                <fullName>SPT Cable</fullName>
            </value>
            <value>
                <fullName>SPM Cable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>