force-app/main/default/objects/SPEN_Planning__c/fields/SPEN_Stakeholder_Engagement_Activity__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Stakeholder_Engagement_Activity__c</fullName>
    <label>Stakeholder Engagement Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Application Consultation Event</fullName>
            </value>
            <value>
                <fullName>Statutory Consultee</fullName>
            </value>
            <value>
                <fullName>Non-Statutory Consultee</fullName>
            </value>
            <value>
                <fullName>Community Council</fullName>
            </value>
            <value>
                <fullName>Parish Council</fullName>
            </value>
            <value>
                <fullName>Landowner</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>