force-app/main/default/objects/SPEN_Planning__c/fields/SPEN_Stakeholder_Name__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Stakeholder_Name__c</fullName>
    <label>Stakeholder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>