force-app/main/default/objects/SPEN_Planning__c/fields/SPEN_StakeholderEngagementActivity__c.field-meta.xml
<CustomField>
    <fullName>SPEN_StakeholderEngagementActivity__c</fullName>
    <label>Stakeholder Engagement Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Application Consultation Event</fullName>
            </value>
            <value>
                <fullName>Statutory Consultee</fullName>
            </value>
            <value>
                <fullName>Non-Statutory Consultee</fullName>
            </value>
            <value>
                <fullName>Community Council</fullName>
            </value>
            <value>
                <fullName>Parish Council</fullName>
            </value>
            <value>
                <fullName>Land Owner</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Elected Members</fullName>
            </value>
            <value>
                <fullName>Member of Parliament</fullName>
            </value>
            <value>
                <fullName>Member of Scottish Parliament</fullName>
            </value>
            <value>
                <fullName>Member of Senedd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>