force-app/main/default/objects/SPEN_Planning__c/fields/SPEN_Status__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>In Progress-Date Submitted</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Feedback Pending</fullName>
            </value>
            <value>
                <fullName>Submitted to Local Authority</fullName>
            </value>
            <value>
                <fullName>With Public Inquiry</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved with Conditions</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>In Progress-Date Submiited</fullName>
                <isActive>false</isActive>
                <label>In Progress-Date Submiited</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>