force-app/main/default/objects/SPEN_Planning__c/fields/SPEN_SuspensiveConditionsDischarge__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SuspensiveConditionsDischarge__c</fullName>
    <label>Suspensive Conditions Discharge</label>
    <type>Date</type>
</CustomField>