force-app/main/default/objects/SPEN_Planning__c/fields/SPEN_UniqueID__c.field-meta.xml
<CustomField>
    <fullName>SPEN_UniqueID__c</fullName>
    <displayFormat>PL-{00000}</displayFormat>
    <label>Unique ID</label>
    <type>AutoNumber</type>
</CustomField>