force-app/main/default/objects/SPEN_Planning__c/fields/SPEN_WithConditions__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WithConditions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked if approval from local authority came back with conditions</description>
    <label>With Conditions</label>
    <type>Checkbox</type>
</CustomField>