force-app/main/default/objects/SPEN_Planning__c/validationRules/SPEN_CommentsCannotBeBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_CommentsCannotBeBlank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( SPEN_Status__c ), OR(  ISPICKVAL(SPEN_Status__c, &quot;Cancelled&quot;) , ISPICKVAL(SPEN_Status__c, &quot;Refused&quot;)), ISBLANK( SPEN_Comments__c ))</errorConditionFormula>
    <errorDisplayField>SPEN_Comments__c</errorDisplayField>
    <errorMessage>Note/Comment cannot be blank for Cancelled/Refused status.</errorMessage>
</ValidationRule>