force-app/main/default/objects/SPEN_Planning__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_ConsentingAuthority__c</columns>
    <columns>SPEN_Stakeholder_Name__c</columns>
    <columns>SPEN_Authority_Reference__c</columns>
    <columns>SPEN_StakeholderEngagementActivity__c</columns>
    <columns>SPEN_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>